--- a/Time-Tracker/TTDetailViewController.xib
+++ b/Time-Tracker/TTDetailViewController.xib
@@ -12,6 +12,7 @@
                 <outlet property="checkOutButton" destination="hPX-PH-gz2" id="f5h-vI-izl"/>
                 <outlet property="reportButton" destination="hPX-PH-gz2" id="fch-4Y-Sds"/>
                 <outlet property="tableVIew" destination="xOE-BZ-nkC" id="5LW-Gb-CXz"/>
+                <outlet property="tableView" destination="xOE-BZ-nkC" id="P4e-ii-65L"/>
                 <outlet property="timeLabel" destination="aBf-eb-WEj" id="Mag-TF-yuV"/>
                 <outlet property="titleTextField" destination="upe-gH-biL" id="N7D-y0-qKK"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -22,6 +23,17 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="upe-gH-biL">
+                    <rect key="frame" x="87" y="118" width="430" height="30"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                    <variation key="heightClass=regular" fixedFrame="YES">
+                        <rect key="frame" x="80" y="151" width="430" height="30"/>
+                    </variation>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="N50-dd-zWW"/>
+                    </connections>
+                </textField>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aBf-eb-WEj">
                     <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -31,13 +43,6 @@
                         <rect key="frame" x="131" y="210" width="322" height="21"/>
                     </variation>
                 </label>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xOE-BZ-nkC">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <variation key="heightClass=regular" fixedFrame="YES">
-                        <rect key="frame" x="80" y="259" width="424" height="439"/>
-                    </variation>
-                </tableView>
                 <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hPX-PH-gz2">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                     <items>
@@ -69,33 +74,30 @@
                         <rect key="frame" x="-8" y="748" width="600" height="44"/>
                     </variation>
                 </toolbar>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="upe-gH-biL">
-                    <rect key="frame" x="87" y="118" width="430" height="30"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="xOE-BZ-nkC">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <variation key="heightClass=regular" fixedFrame="YES">
-                        <rect key="frame" x="80" y="151" width="430" height="30"/>
+                        <rect key="frame" x="102" y="244" width="424" height="439"/>
                     </variation>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="N50-dd-zWW"/>
-                    </connections>
-                </textField>
+                </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <variation key="default">
                 <mask key="subviews">
                     <exclude reference="aBf-eb-WEj"/>
-                    <exclude reference="xOE-BZ-nkC"/>
                     <exclude reference="hPX-PH-gz2"/>
+                    <exclude reference="xOE-BZ-nkC"/>
                 </mask>
             </variation>
             <variation key="heightClass=regular">
                 <mask key="subviews">
                     <include reference="aBf-eb-WEj"/>
-                    <include reference="xOE-BZ-nkC"/>
                     <include reference="hPX-PH-gz2"/>
+                    <include reference="xOE-BZ-nkC"/>
                 </mask>
             </variation>
+            <point key="canvasLocation" x="373" y="313"/>
         </view>
     </objects>
 </document>
